# keymaker

./: .env.example  .gitignore  AWS_DEBUGGING_403.md  AWS_INTEGRATION_COMPLETE.md  AWS_INTEGRATION_STATUS.md  AWS_TESTING_GUIDE.md  CHANGELOG.md  CLOUD-INTEGRATION-ROADMAP.md  CODEX-PLAN.md  CONTRIBUTING.md  CONVERSION-SUMMARY.md  FLATPAK.md  GNOME-HIG.md  IMPLEMENTING_DUAL_VERSION_BUILDS.md  IMPL_COMPLETION_SUMMARY.md  LICENSE  PHASE0.md  README.md  REFACTORING-COMPLETE.md  REFACTORING-PLAN.md  RELEASE.md  TESTING-TODO.md  build.sh  io.github.tobagin.KeySmith.yml  keymaker.in  keysmith.in  meson-vala.build  meson.build  meson.options  meson_options.txt  meson_post_install.py  test-simple  test-simple.vala  test_sheet.vala
data/: io.github.tobagin.KeySmith.appdata.xml  io.github.tobagin.KeySmith.desktop  io.github.tobagin.KeySmith.gschema.xml  io.github.tobagin.keymaker.desktop.in  io.github.tobagin.keymaker.gschema.xml  io.github.tobagin.keymaker.metainfo.xml.in  io.github.tobagin.keysmith.desktop.in  io.github.tobagin.keysmith.gschema.xml  io.github.tobagin.keysmith.gschema.xml.in  io.github.tobagin.keysmith.metainfo.xml.in  keysmith.gresource.xml.in  meson.build
data/icons/: meson.build
data/ui/: add_key_to_agent_dialog.blp  add_target_dialog.blp  backup_center_dialog.blp  backup_page.blp  change_passphrase_dialog.blp  connection_diagnostics_dialog.blp  connection_diagnostics_runner_dialog.blp  connection_test_dialog.blp  copy_id_dialog.blp  create_backup_dialog.blp  create_tunnel_dialog.blp  diagnostic_configuration_dialog.blp  diagnostic_html_report_dialog.blp  diagnostic_results_view_dialog.blp  diagnostics_page.blp  emergency_vault_dialog.blp  generate_dialog.blp  hosts_page.blp  key_details_dialog.blp  key_list.blp  key_rotation_dialog.blp  key_row.blp  key_service_mapping_dialog.blp  keymaker.gresource.xml  keysmith.gresource.xml  keysmith.gresource.xml.in  meson.build  plan_details_dialog.blp  preferences_dialog.blp  restore_backup_dialog.blp  rotation_page.blp  rotation_plan_editor_dialog.blp  ssh_agent_dialog.blp  ssh_config_dialog.blp  ssh_host_edit_dialog.blp  ssh_tunneling_dialog.blp  tunnels_page.blp  window.blp
data/ui/dialogs/: add_key_to_agent_dialog.blp  aws_credentials_dialog.blp  backup_center_dialog.blp  change_passphrase_dialog.blp  cloud_key_deploy_dialog.blp  cloud_key_remove_dialog.blp  connection_diagnostics_runner_dialog.blp  connection_test_dialog.blp  copy_id_dialog.blp  create_backup_dialog.blp  create_tunnel_dialog.blp  diagnostic_configuration_dialog.blp  diagnostic_type_selection_dialog.blp  emergency_vault_dialog.blp  generate_dialog.blp  github_auth_dialog.blp  host_key_conflict_dialog.blp  host_key_verification_dialog.blp  key_details_dialog.blp  key_rotation_dialog.blp  preferences_dialog.blp  restore_backup_dialog.blp  rotation_plan_editor_dialog.blp  shortcuts_dialog.blp  ssh_agent_dialog.blp  ssh_config_dialog.blp  ssh_host_edit_dialog.blp  ssh_tunneling_dialog.blp  terminal_dialog.blp
data/ui/pages/: backup_page.blp  cloud_providers_page.blp  hosts_page.blp  keys_page.blp  known_hosts_page.blp
data/ui/widgets/: empty_state_row.blp  key_row.blp
src/: Application.vala  Config.vala.in  Main.vala  application.vala  main.vala  meson.build
src/backend/: BackupManager.vala  DiagnosticHistory.vala  EmergencyVaultOld.vala  KeyScanner.vala  KeySelectionManager.vala  KnownHostsManager.vala  SshAgent.vala  SshConfig.vala  TotpManager.vala  backup-manager.vala  connection-diagnostics.vala  diagnostic-history.vala  emergency-vault.vala  key-rotation.vala  key-scanner.vala  ssh-agent.vala  ssh-config.vala  ssh-operations.vala  ssh-tunneling.vala  totp-manager.vala
src/backend/cloud/: AWSProvider.vala  AWSRequestSigner.vala  BitbucketOAuthServer.vala  BitbucketProvider.vala  CacheManager.vala  CloudKeyMetadata.vala  CloudProvider.vala  CloudProviderManager.vala  CloudProviderType.vala  GCPOAuthServer.vala  GCPProvider.vala  GitHubOAuthServer.vala  GitHubProvider.vala  GitLabOAuthServer.vala  GitLabProvider.vala  GiteaOAuthServer.vala  GiteaProvider.vala  HttpClient.vala  TokenStorage.vala
src/backend/diagnostics/: ConnectionDiagnostics.vala
src/backend/rotation/: Deploy.vala  KeyRotation.vala  Plan.vala  PlanManager.vala  Rollback.vala  Runner.vala  plan-manager.vala  rollback.vala
src/backend/ssh-operations/: generation.vala  metadata.vala  mutate.vala
src/backend/ssh_operations/: Generation.vala  Metadata.vala  Mutate.vala  SshOperations.vala
src/backend/tunneling/: ActiveTunnel.vala  Configuration.vala  Manager.vala  SshTunneling.vala  active-tunnel.vala  configuration.vala
src/backend/vault/: BackupEntry.vala  EmergencyVault.vala  VaultIo.vala  backup-entry.vala  vault-io.vala
src/models/: Enums.vala  KeyServiceMapping.vala  KnownHostEntry.vala  PageModels.vala  SshKey.vala  enums.vala  key-service-mapping.vala  page-models.vala  ssh-key.vala
src/ui/: KeyList.vala  KeyRow.vala  RotationPlanActions.vala  Window.vala  key-list.vala  key-row.vala  rotation-plan-actions.vala  window.vala
src/ui/dialogs/: AWSCredentialsDialog.vala  AboutDialog.vala  AddKeyToAgentDialog.vala  AddTargetDialog.vala  BackupCenterDialog.vala  BackupDetailsDialog.vala  ChangePassphraseDialog.vala  CloudKeyDeployDialog.vala  CloudKeyRemoveDialog.vala  ConnectionDiagnosticsDialog.vala  ConnectionDiagnosticsRunnerDialog.vala  ConnectionTestDialog.vala  CopyIdDialog.vala  CreateBackupDialog.vala  CreateTunnelDialog.vala  DeleteKeyDialog.vala  DiagnosticConfigurationDialog.vala  DiagnosticHtmlReportDialog.vala  DiagnosticResultsViewDialog.vala  EmergencyBackupAuthDialog.vala  (+51 more)
src/utils/: AsyncQueue.vala  BatchProcessor.vala  Command.vala  ConnectionPool.vala  Filesystem.vala  Log.vala  Settings.vala  async-queue.vala  command.vala  connection-pool.vala  log.vala  settings.vala
tests/: __init__.py  meson.build  test-main.vala  test-rotation.vala  test-ssh-operations.vala  test-tunneling.vala  test-utils.vala  test_integration.py  test_key_scanner.py  test_keysmith.py  test_models.py  test_performance.py  test_ssh_operations.py  test_ui_components.py
(+168 files in other folders)
