# Source files
sources = files(
    'main.vala',
    'application.vala',
    'models/enums.vala',
    'models/ssh-key.vala',
    'models/key-service-mapping.vala',
    'models/page-models.vala',
    'backend/ssh-operations.vala',
    'backend/ssh-operations/generation.vala',
    'backend/ssh-operations/metadata.vala',
    'backend/ssh-operations/mutate.vala',
    'backend/key-scanner.vala',
    'backend/ssh-agent.vala',
    'backend/ssh-config.vala',
    'backend/key-selection-manager.vala',
    'ui/window.vala',
    'ui/pages/keys-page.vala',
    'ui/pages/hosts-page.vala',
    'ui/pages/backup-page.vala',
    'ui/pages/rotation-page.vala',
    'ui/pages/tunnels-page.vala',
    'ui/pages/diagnostics-page.vala',
    'ui/key-list.vala',
    'ui/key-row.vala',
    'ui/dialogs/generate-dialog.vala',
    'ui/dialogs/key-details-dialog.vala',
    'ui/dialogs/change-passphrase-dialog.vala',
    'ui/dialogs/copy-id-dialog.vala',
    'ui/dialogs/delete-key-dialog.vala',
    'ui/dialogs/preferences-dialog.vala',
    'ui/dialogs/help-dialog.vala',
    'ui/dialogs/about-dialog.vala',
    'ui/dialogs/shortcuts-dialog.vala',
    'ui/dialogs/ssh-agent-dialog.vala',
    'ui/dialogs/add-key-to-agent-dialog.vala',
    'ui/dialogs/key-service-mapping-dialog.vala',
    'ui/dialogs/ssh-config-dialog.vala',
    'ui/dialogs/ssh-host-edit-dialog.vala',
    'ui/dialogs/terminal-dialog.vala',
    'backend/connection-diagnostics.vala',
    'backend/diagnostic-history.vala',
    'ui/dialogs/connection-diagnostics-dialog.vala',
    'ui/dialogs/connection-diagnostics-runner-dialog.vala',
    'ui/dialogs/diagnostic-results-view-dialog.vala',
    'backend/key-rotation.vala',
    'backend/rotation/plan.vala',
    'backend/rotation/plan-manager.vala',
    'backend/rotation/runner.vala',
    'backend/rotation/deploy.vala',
    'backend/rotation/rollback.vala',
    'ui/dialogs/key-rotation-dialog.vala',
    'ui/dialogs/rotation-plan-editor-dialog.vala',
    'ui/dialogs/add-target-dialog.vala',
    'ui/dialogs/plan-details-dialog.vala',
    'ui/widgets/rotation-plan-rows.vala',
    'ui/rotation-plan-actions.vala',
    'backend/backup-manager.vala',
    'backend/totp-manager.vala',
    'backend/emergency-vault.vala',
    'backend/vault/backup-entry.vala',
    'backend/vault/vault-io.vala',
    'ui/dialogs/emergency-vault-dialog.vala',
    'ui/dialogs/backup-center-dialog.vala',
    'ui/dialogs/create-backup-dialog.vala',
    'ui/dialogs/restore-backup-dialog.vala',
    'backend/ssh-tunneling.vala',
    'backend/tunneling/configuration.vala',
    'backend/tunneling/active-tunnel.vala',
    'backend/tunneling/manager.vala',
    'ui/dialogs/ssh-tunneling-dialog.vala',
    'ui/dialogs/create-tunnel-dialog.vala',
    'utils/filesystem.vala',
    'utils/command.vala',
    'utils/log.vala',
    'utils/settings.vala',
    'utils/connection-pool.vala',
    'utils/batch-processor.vala',
    'utils/async-queue.vala',
)

# Build executable
executable(
    'keymaker',
    sources,
    config_vala,
    ui_resources,
    dependencies: [
        gtk_dep,
        adw_dep,
        gio_dep,
        gee_dep,
        json_dep,
        vte_dep,
        math_dep,
    ],
    vala_args: vala_args,
    c_args: c_args,
    install: true,
    install_dir: get_option('bindir')
)
