# Source files
sources = files(
    'Main.vala',
    'Application.vala',
    'models/Enums.vala',
    'models/SshKey.vala',
    'models/KeyServiceMapping.vala',
    'models/PageModels.vala',
    'models/KnownHostEntry.vala',
    'backend/ssh_operations/SshOperations.vala',
    'backend/ssh_operations/Generation.vala',
    'backend/ssh_operations/Metadata.vala',
    'backend/ssh_operations/Mutate.vala',
    'backend/KeyScanner.vala',
    'backend/SshAgent.vala',
    'backend/SshConfig.vala',
    'backend/KeySelectionManager.vala',
    'backend/KnownHostsManager.vala',
    'backend/cloud/CloudProviderType.vala',
    'backend/cloud/CloudKeyMetadata.vala',
    'backend/cloud/CloudProvider.vala',
    'backend/cloud/CloudProviderManager.vala',
    'backend/cloud/HttpClient.vala',
    'backend/cloud/TokenStorage.vala',
    'backend/cloud/GitHubOAuthServer.vala',
    'backend/cloud/GitHubProvider.vala',
    'backend/cloud/GitLabOAuthServer.vala',
    'backend/cloud/GitLabProvider.vala',
    'backend/cloud/BitbucketProvider.vala',
    'backend/cloud/BitbucketOAuthServer.vala',
    'backend/cloud/GiteaOAuthServer.vala',
    'backend/cloud/GiteaProvider.vala',
    'backend/cloud/GCPOAuthServer.vala',
    'backend/cloud/GCPProvider.vala',
    'backend/cloud/AWSRequestSigner.vala',
    'backend/cloud/AWSProvider.vala',
    'backend/cloud/CacheManager.vala',
    'ui/Window.vala',
    'ui/pages/KeysPage.vala',
    'ui/pages/HostsPage.vala',
    'ui/pages/KnownHostsPage.vala',
    'ui/pages/CloudProvidersPage.vala',
    'ui/pages/BackupPage.vala',
    'ui/pages/RotationPage.vala',
    'ui/pages/TunnelsPage.vala',
    'ui/pages/DiagnosticsPage.vala',
    'ui/KeyList.vala',
    'ui/KeyRow.vala',
    'ui/dialogs/GenerateDialog.vala',
    'ui/dialogs/KeyDetailsDialog.vala',
    'ui/dialogs/ChangePassphraseDialog.vala',
    'ui/dialogs/CopyIdDialog.vala',
    'ui/dialogs/DeleteKeyDialog.vala',
    'ui/dialogs/PreferencesDialog.vala',
    'ui/dialogs/HelpDialog.vala',
    'ui/dialogs/AboutDialog.vala',
    'ui/dialogs/ShortcutsDialog.vala',
    'ui/dialogs/SshAgentDialog.vala',
    'ui/dialogs/AddKeyToAgentDialog.vala',
    'ui/dialogs/KeyServiceMappingDialog.vala',
    'ui/dialogs/SshConfigDialog.vala',
    'ui/dialogs/SshHostEditDialog.vala',
    'ui/dialogs/TerminalDialog.vala',
    'ui/dialogs/HostKeyVerificationDialog.vala',
    'ui/dialogs/HostKeyConflictDialog.vala',
    'ui/dialogs/GitHubAuthDialog.vala',
    'ui/dialogs/AWSCredentialsDialog.vala',
    'ui/dialogs/CloudKeyDeployDialog.vala',
    'ui/dialogs/CloudKeyRemoveDialog.vala',
    'backend/diagnostics/ConnectionDiagnostics.vala',
    'backend/DiagnosticHistory.vala',
    'ui/dialogs/ConnectionDiagnosticsDialog.vala',
    'ui/dialogs/ConnectionDiagnosticsRunnerDialog.vala',
    'ui/dialogs/DiagnosticResultsViewDialog.vala',
    'ui/dialogs/DiagnosticConfigurationDialog.vala',
    'ui/dialogs/DiagnosticHtmlReportDialog.vala',
    'backend/rotation/KeyRotation.vala',
    'backend/rotation/Plan.vala',
    'backend/rotation/PlanManager.vala',
    'backend/rotation/Runner.vala',
    'backend/rotation/Deploy.vala',
    'backend/rotation/Rollback.vala',
    'ui/dialogs/KeyRotationDialog.vala',
    'ui/dialogs/RotationPlanEditorDialog.vala',
    'ui/dialogs/AddTargetDialog.vala',
    'ui/dialogs/PlanDetailsDialog.vala',
    'ui/widgets/RotationPlanRows.vala',
    'ui/widgets/EmptyStateRow.vala',
    'ui/widgets/CloudAccountSection.vala',
    'ui/RotationPlanActions.vala',
    'backend/BackupManager.vala',
    'backend/TotpManager.vala',
    'backend/vault/EmergencyVault.vala',
    'backend/vault/BackupEntry.vala',
    'backend/vault/VaultIo.vala',
    'ui/dialogs/EmergencyVaultDialog.vala',
    'ui/dialogs/BackupCenterDialog.vala',
    'ui/dialogs/CreateBackupDialog.vala',
    'ui/dialogs/RestoreBackupDialog.vala',
    'ui/dialogs/BackupDetailsDialog.vala',
    'ui/dialogs/EmergencyBackupDetailsDialog.vala',
    'ui/dialogs/EmergencyBackupAuthDialog.vala',
    'backend/tunneling/SshTunneling.vala',
    'backend/tunneling/Configuration.vala',
    'backend/tunneling/ActiveTunnel.vala',
    'backend/tunneling/Manager.vala',
    'ui/dialogs/SshTunnelingDialog.vala',
    'ui/dialogs/CreateTunnelDialog.vala',
    'ui/helpers/BackupHelpers.vala',
    'utils/Filesystem.vala',
    'utils/Command.vala',
    'utils/Log.vala',
    'utils/Settings.vala',
    'utils/ConnectionPool.vala',
    'utils/BatchProcessor.vala',
    'utils/AsyncQueue.vala',
)

dependencies_list = [
    gtk_dep,
    adw_dep,
    gio_dep,
    gee_dep,
    json_dep,
    vte_dep,
    math_dep,
    soup_dep,
    secret_dep,
]

if webkit_dep.found()
    dependencies_list += [webkit_dep]
endif

# Build executable
executable(
    'keymaker',
    sources,
    config_vala,
    ui_resources,
    dependencies: dependencies_list,
    vala_args: vala_args,
    c_args: c_args,
    install: true,
    install_dir: get_option('bindir')
)
