# Install hicolor icons
icon_sizes = ['16x16', '24x24', '32x32', '48x48', '64x64', '96x96', '128x128', '256x256', '512x512']

foreach size : icon_sizes
  install_data(
    'hicolor' / size / 'apps' / 'io.github.tobagin.keysmith.png',
    install_dir: get_option('datadir') / 'icons' / 'hicolor' / size / 'apps',
    rename: '@0@.png'.format(app_id)
  )
endforeach

# Install custom symbolic icons
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-qr-code-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Rotation plan icons

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-execute-all-rotation-plan-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-duplicate-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-rollback-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-change-passphrase-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Download icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-download-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)


# Individual item remove icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-remove-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Emergency vault icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-emergency-vault-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Time-locked backup icons
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-time-locked-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-time-unlocked-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# OTP/TOTP backup icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-otp-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Backup Center icons
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-backup-center-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-overview-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# SSH Port icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-port-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Username icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-username-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# GitHub icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-github-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# GitLab icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-gitlab-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)