

# Install SVG icon (made square by adjusting viewBox)
if get_option('profile') == 'development'
  install_data(
    'hicolor/scalable/apps/io.github.tobagin.keysmith.Devel.svg',
    install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
    rename: '@0@.svg'.format(app_id)
  )
else
  install_data(
    'hicolor/scalable/apps/io.github.tobagin.keysmith.svg',
    install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
    rename: '@0@.svg'.format(app_id)
  )
endif



# Install custom symbolic icons
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-qr-code-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Cloud provider icons
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-cloud-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-connect-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-disconnect-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Rotation plan icons

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-execute-all-rotation-plan-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-duplicate-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-rollback-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-change-passphrase-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Download icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-download-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)


# Individual item remove icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-remove-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Emergency vault icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-emergency-vault-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Time-locked backup icons
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-time-locked-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-time-unlocked-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# OTP/TOTP backup icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-otp-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Backup Center icons
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-backup-center-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-overview-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# SSH Port icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-port-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Username icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-username-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# GitHub icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-github-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# GitLab icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-gitlab-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Health status icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-health-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Diagnostics icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-diagnostics-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Rerun icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-rerun-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# DNS Resolution Test icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-dns-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Protocol Detection icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-protocol-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)

# Performance Test icon
install_data(
  'hicolor/scalable/actions/io.github.tobagin.keysmith-performance-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions'
)